# jackal_ocg120g

./: .gitignore  .gitmodules  README.md
docs/: jetson_bootup.md  setup_network.md  setup_pc.md  time_sync.md
jackal_ocg120g/: CMakeLists.txt  package.xml
ocg120g_bringup/: CMakeLists.txt  package.xml
ocg120g_bringup/launch/: bringup_livox.launch  bringup_realsense.launch  bringup_sensors.launch  bringup_velodyne.launch  (+2 more)
ocg120g_mapping/: CMakeLists.txt  package.xml
ocg120g_mapping/config/: jackal_3d.lua
ocg120g_mapping/launch/: cartographer.launch  cartographer_2d_livox.launch  cartographer_2d_realsense.launch  cartographer_2d_velodyne.launch  cartographer_3d.launch
ocg120g_navigation/: CMakeLists.txt  package.xml
ocg120g_navigation/launch/: jackal_navgigation.launch  navigation_horn.launch  navigation_horn_livox.launch  navigation_horn_realsense.launch  navigation_lippitt.launch  navigation_lippitt_realsense.launch
ocg120g_navigation/maps/: map_horn_04_13_2023.pgm  map_horn_04_13_2023.yaml  map_horn_04_13_2023_raw.pgm  map_lippitt_2022.pgm  map_lippitt_2022.yaml  map_lippitt_2022_raw.pgm  map_lippitt_3_28_2024_raw.pgm  map_lippitt_3_28_2024_raw.yaml  map_lippitt_4_4_2023.yaml  map_lippitt_4_4_2023_raw.pgm
ocg120g_remote/: CMakeLists.txt  README.md  package.xml
ocg120g_remote/launch/: visualize_demo1_J1.launch  visualize_demo1_J2.launch  visualize_demo1_J3.launch  visualize_demo2_J1.launch  visualize_demo2_J2.launch  visualize_demo3_J1.launch  visualize_demo3_J2.launch
ocg120g_remote/rviz/: demo1_J1.rviz  demo1_J2.rviz  demo1_J3.rviz  demo2_J1.rviz  demo2_J2.rviz  demo3_J1_realsense.rviz  demo3_J2.rviz
ocg120g_remote/setup/: setup_remote_J1.sh  setup_remote_J2.sh
ocg120g_remote/setup/J1_laptop/: setup_Demo2_J1.sh  setup_J1_Demo1.sh  setup_J1_Demo2.sh
ocg120g_remote/setup/J2_laptop/: setup_Demo1_J2.sh  setup_Demo2_J2.sh  setup_Demo3_J2.sh  setup_J2_Demo1.sh  setup_J2_Demo2.sh  setup_J2_Demo3.sh
ocg120g_remote/setup/J3_laptop/: setup_Demo1_J3.sh  setup_J3_Demo1.sh  setup_demo1.sh
ocg120g_teleop/: CMakeLists.txt  package.xml
ocg120g_teleop/config/: f710.yaml
ocg120g_teleop/launch/: teleop.launch
ocg120g_teleop/scrpts/: tank_teleop.py
scripts/: connect_velodyne.sh  setup  setup.yaml
(+9 files in other folders)
