<?xml version="1.0"?>
<package format="2">
  <name>ocg120g_mapping</name>
  <version>0.0.0</version>
  <description>The ocg120g_mapping package</description>

  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>cartographer</depend>
  <depend>cartographer_ros</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>jackal_cartographer_navigation</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
