<?xml version="1.0"?>
<package format="2">
  <name>ocg120g_navigation</name>
  <version>0.0.0</version>
  <description>The ocg120g_navigation package</description>

  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
